# nautilus-share

./: .cvsignore  .gitignore  AUTHORS  BUGS  ChangeLog  INTERNAL  MAINTAINERS  Makefile.am  TODO  autogen.sh  configure.ac  configure.in  debug-net-usershare  my-configure  nautilus-share.doap  smbshared.init
dbus/: 70smbshared  Makefile.am  nautilus-share.conf
debian/: README.Debian  changelog  control  copyright  nautilus-share.config  nautilus-share.postinst  nautilus-share.postrm  nautilus-share.prerm  nautilus-share.templates  rules
extra/: install.sh
interfaces/: .cvsignore  Makefile.am  share-dialog.glade  share-dialog.glade.in
po/: ChangeLog  POTFILES  POTFILES.in  ar.po  as.po  ast.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  kn.po  ko.po  lt.po  lv.po  ml.po  mr.po  nb.po  oc.po  or.po  pa.po  pl.gmo  pl.po  (+15 more)
sample/: smb.conf
schemas/: Makefile.am  nautilus-share.schemas.in
src/: .cvsignore  Makefile.am  build.sh  nautilus-share.c  nautilus-share.h  shares.c  shares.h  smbparser-dbus-client.c  smbparser-dbus-client.h  smbparser-dbus-server.c  smbparser-dbus-server.h  smbparser-dbus.h  smbparser.c  smbparser.h  smbshared.c
src/test/: build.sh  share-dialog.glade  share_editor.glade  test.c
